--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -8,11 +8,11 @@ block main
                 +box-head("Danh sách sản phẩm")
 
         .row    
-            each product in products 
+            each product, index in products 
                 .col-4.mb-3 
                     .product-item
                         .inner-image 
-                            img(src = 'https://cdn.dummyjson.com/product-images/1/thumbnail.jpg', alt = product.title)
+                            img(src = `https://cdn.dummyjson.com/product-images/${product.position}/thumbnail.jpg` alt = product.title )
                         .inner-content  
                             h3.inner-title #{product.title}
                             .inner-price-new #{product.price}$
