Tạo tính năng tìm kiếm sản phẩm

--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -24,7 +24,9 @@ block main
                                 class="form-control" 
                                 placeholder="Nhập tên sản phẩm" 
                                 name="product-name"
+                                value=productName
                                 )
+
                             .input-group-append
                                 button(
                                     type="submit" 
