--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ./../../layouts/default.pug
 include ./../../mixins/filter-button.pug
 include ./../../mixins/form-search.pug
 include ./../../mixins/pagination.pug
+include ./../../mixins/form-change-multi.pug
 
 block main 
     h1 Danh sách sản phẩm 
@@ -22,10 +23,19 @@ block main
     //- List products
     .card.bg-light.mb-3
         .card-header Danh sách
+            +form-change-multi()
+            
         .card-body
-            table.table.table-sm
+            table(class="table table-sm" checbox-multi)
                 thead
                     tr
+                        th(class="form-check") 
+                            input(
+                                type="checkbox" 
+                                class="form-check-input position-static ml-1"
+                                name="checkall"   
+                            )
+
                         th STT
                         th Hình ảnh 
                         th Tiêu đề
@@ -36,6 +46,14 @@ block main
                     //- for như js
                     -for(let i = 0; i < products.length; ++i)
                         tr
+                            td(class="form-check")
+                                input(
+                                    type="checkbox" 
+                                    class="form-check-input position-static  ml-1"
+                                    name="id"
+                                    value=products[i]._id
+                                )
+                                
                             td #{i + 1}
                             td 
                                 img(src=products[i].thumbnail
@@ -73,7 +91,6 @@ block main
         id='form-change-status-product'
         method='POST'
         action=""
-        url-temp=`${prefixAdmin}/products/change-status`
     )
 
     script(src="js/product.js")     
