--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -12,6 +12,7 @@ mixin form-change-multi()
                     option(disabled selected ) --- Chọn trạng thái ---
                     option(value="active") Hoạt động                            
                     option(value="inactive") Dừng hoạt động                            
+                    option(value="delete-all") Xóa tất cả                            
 
                 input(type="text" class="form-control d-none" name="ids" placeholder="id sản phẩm")
 
