Tính năng xóa nhiều sản phẩm

--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -8,7 +8,7 @@ mixin form-change-multi()
 
         .input-group
             .input-group-prepend
-                select(class="custom-select" name="status")
+                select(class="custom-select" name="type")
                     option(disabled selected ) --- Chọn trạng thái ---
                     option(value="active") Hoạt động                            
                     option(value="inactive") Dừng hoạt động                            
