--- a/views/admin/mixins/form-change-multi.pug
+++ b/views/admin/mixins/form-change-multi.pug
@@ -13,6 +13,7 @@ mixin form-change-multi()
                     option(value="active") Hoạt động                            
                     option(value="inactive") Dừng hoạt động                            
                     option(value="delete-all") Xóa tất cả                            
+                    option(value="change-position") Thay đổi vị trí                            
 
                 input(type="text" class="form-control d-none" name="ids" placeholder="id sản phẩm")
 
