--- a/views/admin/pages/trash/product-deleted.pug
+++ b/views/admin/pages/trash/product-deleted.pug
@@ -1,9 +1,15 @@
 extends ./../../layouts/default.pug
 include ./../../mixins/form-search.pug
 include ./../../mixins/pagination.pug
+include ./../../mixins/notification-success.pug
+include ./../../mixins/notification-error.pug
 
 block main 
     h1 Danh sách sản phẩm đã xóa 
+    
+    //- notification
+    +notification-success(messages.success)
+    +notification-error(messages.error)
 
     //- Filter
     .card.bg-light.mb-3
@@ -85,4 +91,4 @@ block main
         path=`${prefixAdmin}/trash/products`
     )
 
-    
+    script(src="/admin/js/trash.js")
