--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -12,7 +12,10 @@ block main
                 .col-4.mb-3 
                     .product-item
                         .inner-image 
-                            img(src = `https://cdn.dummyjson.com/product-images/${product.position}/thumbnail.jpg` alt = product.title )
+                            img(
+                                src = product.thumbnail 
+                                alt = product.title 
+                            )
                         .inner-content  
                             h3.inner-title #{product.title}
                             .inner-price-new #{product.price}$
