--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@
 }
 /* End Footer */
 
-
+/* Card product */
 .container.my-3 {
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -61,7 +61,7 @@
 }
 
 .product-item:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .inner-image img {
@@ -75,10 +75,13 @@
 }
 
 .inner-content .inner-title {
-    font-size: 1.25rem;
+    font-size: small;
     font-weight: bold;
     margin-bottom: 0.25rem;
     color: #333;
+    white-space: nowrap; /* Không cho phép xuống dòng */
+    overflow: hidden; /* Ẩn nội dung tràn */
+    text-overflow: ellipsis; /* Hiển thị dấu ba chấm khi nội dung bị cắt ngắn */
 }
 
 .inner-content .inner-price-new {
@@ -107,3 +110,8 @@
     text-align: center;
     border-radius: 7px;
 }
+
+a[card-product]:hover{
+    text-decoration: none;
+}
+/* End Card product */
