--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -9,18 +9,19 @@ block main
 
         .row    
             each product, index in products 
-                .col-4.mb-3 
-                    .product-item
-                        .inner-image 
-                            img(
-                                src = product.thumbnail 
-                                alt = product.title 
-                            )
-                        .inner-content  
-                            h3.inner-title #{product.title}
-                            .inner-price-new #{(product.price * (100 - product.discountPercentage)/100).toFixed(0)}$
-                            .inner-price-old #{product.price}$
-                            .inner-discount -#{product.discountPercentage}%
+                .col-2.mb-3
+                    a(href=`/products/${product.slug}` card-product)
+                        .product-item
+                            .inner-image 
+                                img(
+                                    src = product.thumbnail 
+                                    alt = product.title 
+                                )
+                            .inner-content  
+                                .inner-title #{product.title}
+                                .inner-price-new #{(product.price * (100 - product.discountPercentage)/100).toFixed(0)}$
+                                .inner-price-old #{product.price}$
+                                .inner-discount -#{product.discountPercentage}%
 
             
             
