--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -4,7 +4,7 @@ header.header
             .col-3 
                 .inner-logo 
                     a(href='/')
-                        img(src='./images/logo.png' alt='logo')
+                        img(src='/images/logo.png' alt='logo')
             
             .col-9 
                 .inner-menu 
