update đẩy ảnh lên cloud

--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -40,6 +40,10 @@ block main
             class="badge badge-danger"
         ) Dừng hoạt động
     
+    
+    if (product.description)
+        div <i>#{product.description}</i>
+
     br
     a(
         type="button" 
