Sửa phần mô tả, thêm tinymce

--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -123,3 +123,6 @@ block main
                 ) Dừng hoạt động
         br
         button(type="submit" class="btn btn-primary") Tạo mới
+
+    script(type="application/javascript" src= "/tinymce/tinymce.min.js")
+    script(type="application/javascript" src= "/admin/js/tinymce-config.js")
