--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -42,8 +42,8 @@ block main
     
     
     if (product.description)
-        div <i>#{product.description}</i>
-
+        div <i>!{product.description}</i>
+        
     br
     a(
         type="button" 
