--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -29,5 +29,5 @@ block main
             div Còn lại: <b>#{product.stock}</b>
 
         if (product.description)
-            div #{product.description}    
+            div !{product.description}    
         
