--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -133,3 +133,6 @@ block main
                 ) Dừng hoạt động
         br
         button(type="submit" class="btn btn-primary") Cập nhật
+
+        script(type="application/javascript" src= "/tinymce/tinymce.min.js")
+        script(type="application/javascript" src= "/admin/js/tinymce-config.js")
